--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
     </section>
-    <script src="/hungry-people/js/javascript.js"></script>
+    <script src="js/javascript.js"></script>
 </body>
 
 </html>
